--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.5",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
     "@angular/core": "~10.0.5",
@@ -19,7 +20,11 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "angularfire2": "^5.4.2",
+    "bootstrap": "^5.1.3",
+    "firebase": "^7.24.0",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^11.1.9",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
